--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,11 +30,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  max-width: 1920px;
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
 }
 
 h1 {
