--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,6 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -31,9 +29,9 @@ a:hover {
 
 body {
   max-width: 1920px;
-    margin: 0 auto;
-    width: 100%;
-    text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
 }
 
 h1 {
@@ -49,7 +47,9 @@ h1 {
   z-index: 999;
   /* Add any other styling you want */
 }
-
+.format-image {
+  object-fit: cover;
+}
 /* 
 
 :root {
